syntax = "proto3";

package mpc_gateway;

service Gateway {
  rpc Create(CreateRequest) returns (CreateReply);

  rpc Sign(SignRequest) returns (SignReply);

}

message CreateRequest {
  string label = 1;
}

message CreateReply {
  string label = 1;
}


message SignRequest {
  int32 max_signers = 1;
  int32 min_signers = 2;
  string label = 3;
  bytes message = 4;
}

message SignReply {
  string label = 1;
  bytes signature = 2;
}

